# fv3-jedi-linearmodel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
buildscripts/: build_fv3_discover.csh  build_fv3_theia.sh
cmake/: compiler_flags_GNU_C.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_Fortran.cmake  fv3_compiler_flags.cmake  fv3jedilm_compiler_flags.cmake
python_bindings/: .f2py_f2cmap_default_real_is_double  .f2py_f2cmap_default_real_is_float  CMakeLists.txt  __init__.py  runtime_mod.F90
python_bindings/examples/data/: 20201215.000000.coupler.res  20201215.000000.fv_core.res.tile1.nc  20201215.000000.fv_core.res.tile2.nc  20201215.000000.fv_core.res.tile3.nc  20201215.000000.fv_core.res.tile4.nc  20201215.000000.fv_core.res.tile5.nc  20201215.000000.fv_core.res.tile6.nc  20201215.000000.fv_srf_wnd.res.tile1.nc  20201215.000000.fv_srf_wnd.res.tile2.nc  20201215.000000.fv_srf_wnd.res.tile3.nc  20201215.000000.fv_srf_wnd.res.tile4.nc  20201215.000000.fv_srf_wnd.res.tile5.nc  20201215.000000.fv_srf_wnd.res.tile6.nc  20201215.000000.fv_tracer.res.tile1.nc  20201215.000000.fv_tracer.res.tile2.nc  20201215.000000.fv_tracer.res.tile3.nc  20201215.000000.fv_tracer.res.tile4.nc  20201215.000000.fv_tracer.res.tile5.nc  20201215.000000.fv_tracer.res.tile6.nc  20201215.000000.sfc_data.tile1.nc  20201215.000000.sfc_data.tile2.nc  20201215.000000.sfc_data.tile3.nc  20201215.000000.sfc_data.tile4.nc  20201215.000000.sfc_data.tile5.nc  20201215.000000.sfc_data.tile6.nc  geos.bkg.crtmsrf.20201215_000000z.nc4  geos.bkg.crtmsrf.20201215_010000z.nc4
python_bindings/examples/example1/: forecast_no_physics.py
python_bindings/examples/example2/: forecast_no_physics.py  pytorch_fv3lm.py
src/: CMakeLists.txt  fv3jedi_lm_mod.F90
src/atmos_cubed_sphere/mapl/: MAPL_Mod.F90  readme
src/atmos_cubed_sphere/model/: a2b_edge.F90  fv_arrays.F90  fv_control.F90  fv_dynamics.F90  fv_fill.F90  fv_mapz.F90  fv_nesting.F90  lin_cloud_microphys.F90  sw_core.F90
src/atmos_cubed_sphere/model_tlmadm/: a2b_edge_adm.F90  a2b_edge_tlm.F90  boundary_adm.F90  dyn_core_adm.F90  dyn_core_tlm.F90  fv_arrays_nlm.F90  fv_control_nlm.F90  fv_dynamics_adm.F90  fv_dynamics_tlm.F90  fv_grid_utils_adm.F90  fv_grid_utils_tlm.F90  fv_mapz_adm.F90  fv_mapz_tlm.F90  fv_mp_adm.F90  fv_mp_tlm.F90  fv_nesting_adm.F90  fv_nesting_tlm.F90  fv_pressures_tlm.F90  fv_restart_adm.F90  fv_restart_tlm.F90  fv_tracer2d_adm.F90  fv_tracer2d_tlm.F90  nh_core_adm.F90  nh_utils_adm.F90  nh_utils_tlm.F90  sw_core_adm.F90  sw_core_tlm.F90  tapenade_iter.F90  tp_core_adm.F90  tp_core_tlm.F90
src/atmos_cubed_sphere/tools/: external_ic.F90  fv_diagnostics.F90  fv_eta.F90  fv_grid_tools.F90  fv_io.F90  fv_restart.F90  fv_timing.F90  fv_treat_da_inc.F90  init_hydro.F90  sim_nc_mod.F90  sorted_index.F90
src/dynamics/: CMakeLists.txt  fv3jedi_lm_dynamics_mod.F90  fv3jedi_lm_dynutils_mod.f90
src/dynamics/atmos_cubed_sphere/model/: a2b_edge_nlm.F90  boundary_nlm.F90  dyn_core.F90  dyn_core_nlm.F90  fv_arrays.F90  fv_arrays_nlm.F90  fv_cmp_nlm.F90  fv_control.F90  fv_control_nlm.F90  fv_dynamics.F90  fv_dynamics_nlm.F90  fv_fill_nlm.F90  fv_grid_utils.F90  fv_grid_utils_nlm.F90  fv_mapz_nlm.F90  fv_nesting_nlm.F90  fv_sg.F90  fv_sg_nlm.F90  fv_tracer2d.F90  fv_tracer2d_nlm.F90  fv_update_phys.F90  fv_update_phys_nlm.F90  lin_cloud_microphys_nlm.F90  nh_core_nlm.F90  nh_utils_nlm.F90  nwp_nudge_nlm.F90  sw_core_nlm.F90  tp_core.F90  tp_core_nlm.F90
src/dynamics/atmos_cubed_sphere/model_tlmadm/: a2b_edge_adm.F90  a2b_edge_tlm.F90  boundary_adm.F90  boundary_tlm.F90  dyn_core_adm.F90  dyn_core_tlm.F90  fv_arrays_nlm.F90  fv_arrays_tlmadm.F90  fv_control_tlmadm.F90  fv_dynamics_adm.F90  fv_dynamics_tlm.F90  fv_grid_utils_adm.F90  fv_grid_utils_tlm.F90  fv_mapz_adm.F90  fv_mapz_tlm.F90  fv_mp_adm.F90  fv_mp_tlm.F90  fv_nesting_adm.F90  fv_nesting_tlm.F90  fv_pressure.F90  fv_restart_adm.F90  fv_restart_tlm.F90  fv_sg_adm.F90  fv_sg_tlm.F90  fv_tracer2d_adm.F90  fv_tracer2d_tlm.F90  nh_core_adm.F90  nh_core_tlm.F90  nh_utils_adm.F90  nh_utils_tlm.F90  sw_core_adm.F90  sw_core_tlm.F90  tp_core_adm.F90  tp_core_tlm.F90
src/dynamics/atmos_cubed_sphere/tools/: external_ic.F90  external_ic_nlm.F90  external_sst.F90  external_sst_nlm.F90  fv_climate_nudge.F90  fv_climate_nudge_nlm.F90  fv_diagnostics_nlm.F90  fv_eta.F90  fv_eta_nlm.F90  fv_grid_tools_nlm.F90  fv_io_nlm.F90  fv_mp_mod.F90  fv_mp_nlm_mod.F90  fv_nudge_nlm.F90  fv_restart_nlm.F90  fv_surf_map.F90  fv_surf_map_nlm.F90  fv_timing_nlm.F90  fv_treat_da_inc_nlm.F90  init_hydro_nlm.F90  read_climate_nudge_data.F90  read_climate_nudge_data_nlm.F90  sim_nc_nlm_mod.F90  sorted_index_nlm.F90  test_cases.F90  test_cases_nlm.F90
src/physics/: CMakeLists.txt  fv3jedi_lm_physics_mod.F90
src/physics/gwd/: gw_drag_b.F90  gw_drag_d.F90
src/physics/moist/: cloud_ad.F90  cloud_tl.F90  fv3jedi_lm_moist_mod.F90
src/physics/radiation/: MieInterface.F90  irradconstants.F90  radconstants.F90  soradconstants.F90
src/physics/turbulence/: bldriver.F90  fv3jedi_lm_turbulence_mod.F90
src/utils/: CMakeLists.txt  MAPL_Constants.F90  fv3jedi_lm_const_mod.F90  fv3jedi_lm_kinds_mod.F90  fv3jedi_lm_utils_mod.F90
